--- a/portfolio_django/portfolio/templates/portfolio/homepage.html
+++ b/portfolio_django/portfolio/templates/portfolio/homepage.html
@@ -7,6 +7,14 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello django</h1>
+    {% for cvelement in cvelements %}
+    <div>
+      <h3>{{ cvelement.nome }}</h3>
+      <p>Da {{cvelement.start }} a {{cvelement.end}}</p>
+      <hr />
+      <div>{{cvelement.riassunto}}</div>
+      <hr />
+    </div>
+    {% endfor %}
   </body>
 </html>
