--- a/portfolio_django/portfolio/templates/portfolio/homepage.html
+++ b/portfolio_django/portfolio/templates/portfolio/homepage.html
@@ -4,17 +4,197 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Homepage</title>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    {% for cvelement in cvelements %}
-    <div>
-      <h3>{{ cvelement.nome }}</h3>
-      <p>Da {{cvelement.start }} a {{cvelement.end}}</p>
-      <hr />
-      <div>{{cvelement.riassunto}}</div>
-      <hr />
+    <!-- Barra di Navigazione -->
+    <nav class="navbar bg-light sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" style="color: rgb(0, 0, 0)" href="#">
+        
+          <img
+            src="https://www.nicepng.com/png/full/440-4408335_logo-clip-art-royalty-free-logos-png.png"
+            alt=""
+            width="30"
+            height="24"
+            class="d-inline-block align-text-top mx-3"
+          />
+          Dwight Schrute
+        </a>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+          <a class="btn btn-secondary me-md-2" type="button" href="#"
+            >Contatti</a
+          >
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="row align-middle">
+        <div class="container my-5 text-center col-9" style="max-width: 580px">
+          <h1>Dwight Schrute CV website</h1>
+          <p class="lead">
+            “La parte più difficile nella vita di un programmatore è quando si
+            da la caccia ad un bug per una settimana, si trova il codice che
+            genera il bug, si offende l'autore del codice ed infine ci si
+            accorge di essere l'autore del codice maledetto.”
+          </p>
+          <div class="container mt-2 mb-2">
+            <div class="row">
+              <div class="col-1">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1200px-HTML5_logo_and_wordmark.svg.png"
+                  alt=""
+                  width="30"
+                  height="30"
+                  class="d-inline-block align-text-top"
+                />
+              </div>
+              <div class="col-11">
+                <div class="progress mt-2">
+                  <div
+                    class="progress-bar progress-bar-striped progress-bar-animated"
+                    role="progressbar"
+                    aria-label="Animated striped example"
+                    aria-valuenow="95"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 95%"
+                  ></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="container mt-2 mb-2">
+            <div class="row">
+              <div class="col-1">
+                <img
+                  src="https://www.freepnglogos.com/uploads/html5-logo-png/html5-logo-css-logo-png-transparent-svg-vector-bie-supply-9.png"
+                  alt=""
+                  width="30"
+                  height="30"
+                  class="d-inline-block align-text-top"
+                />
+              </div>
+              <div class="col-11">
+                <div class="progress mt-2">
+                  <div
+                    class="progress-bar progress-bar-striped bg-success progress-bar-animated"
+                    role="progressbar"
+                    aria-label="Animated striped example"
+                    aria-valuenow="100"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 100%"
+                  ></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="container mt-2 mb-2">
+            <div class="row">
+              <div class="col-1">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/480px-Unofficial_JavaScript_logo_2.svg.png"
+                  alt=""
+                  width="30"
+                  height="30"
+                  class="d-inline-block align-text-top"
+                />
+              </div>
+              <div class="col-11">
+                <div class="progress mt-2">
+                  <div
+                    class="progress-bar progress-bar-striped bg-info progress-bar-animated"
+                    role="progressbar"
+                    aria-label="Animated striped example"
+                    aria-valuenow="65"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 65%"
+                  ></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="container mt-2 mb-2">
+            <div class="row">
+              <div class="col-1">
+                <img
+                  src="https://www.liblogo.com/img-logo/no6273w13b-node-js-logo-what-does-it-take-to-support-node-js-esm-the-guild-blog.png"
+                  alt=""
+                  width="30"
+                  height="30"
+                  class="d-inline-block align-text-top"
+                />
+              </div>
+              <div class="col-11">
+                <div class="progress mt-2">
+                  <div
+                    class="progress-bar progress-bar-striped bg-warning progress-bar-animated"
+                    role="progressbar"
+                    aria-label="Animated striped example"
+                    aria-valuenow="90"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 90%"
+                  ></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container d-none d-lg-block col-3 align-self-center">
+          <img
+            src="https://static.wikia.nocookie.net/theoffice/images/c/c5/Dwight_.jpg/revision/latest?cb=20170701082424"
+            alt=""
+            height=""
+            class="img-thumbnail"
+          />
+        </div>
+      </div>
     </div>
-    {% endfor %}
+    <!-- Struttura Contenuti CV -->
+    <div class="album py-5 bg-light">
+      <h3 class="text-center mb-4 p-2" style="color:rgb(217, 217, 217);background-color: rgb(64, 64, 64); font-style: italic;">.Work Experience.</h3>
+      <div class="container">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+          <!-- Contenuti CV -->
+          {% for cvelement in cvelements %}
+          <div class="col">
+            <div class="card shadow ">
+              <div class="card-body">
+                <!-- <small class="text-muted"></small> -->
+                <strong style="color:rgb(29, 61, 86);" >{{ cvelement.nome }}</strong>
+                <p class="card-text">
+                  {{ cvelement.riassunto }}
+                </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <!-- <button
+                      type="button"
+                      class="btn btn-sm btn-outline-secondary"
+                    >
+                      View
+                    </button> -->
+
+                  </div>
+                
+                  <small class="text-muted"><strong>Da: </strong><span>{{cvelement.start}}</span> <span> - </span><strong> A: </strong><span>{{cvelement.end}}</span></small>
+                </div>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+          
+          
+        </div>
+      </div>
   </body>
 </html>
