Added contacts view

--- a/portfolio_django/portfolio/templates/portfolio/homepage.html
+++ b/portfolio_django/portfolio/templates/portfolio/homepage.html
@@ -12,6 +12,10 @@
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
+
+    <!-- Importare file CSS statici -->
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'portfolio/style.css' %}">
   </head>
   <body>
     <!-- Barra di Navigazione -->
