--- a/portfolio_django/portfolio/static/portfolio/style.css
+++ b/portfolio_django/portfolio/static/portfolio/style.css
@@ -1,3 +1,8 @@
-body {
-  background-color: blue;
+/* body {
+  background-color: purple;
+} */
+
+#titolone {
+  font-size: 32px;
+  font-weigth: light;
 }
