--- a/portfolio_django/portfolio/templates/portfolio/homepage.html
+++ b/portfolio_django/portfolio/templates/portfolio/homepage.html
@@ -18,6 +18,26 @@
     <link rel="stylesheet" href="{% static 'portfolio/style.css' %}">
   </head>
   <body>
+
+
+
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-lg-3 col-md-6 col-12">.col-6 .col-sm-3</div>
+        <div class="col-lg-3 col-md-6 col-12">.col-6 .col-sm-3</div>
+        <div class="col-lg-3 col-md-6 col-12">.col-6 .col-sm-3</div>
+        <div class="col-lg-3 col-md-6 col-12">.col-6 .col-sm-3</div>
+        <div class="col-lg-3 col-md-6 col-12">.col-6 .col-sm-3</div>
+        <div class="col-lg-3 col-md-6 col-12">.col-6 .col-sm-3</div>
+
+    
+      </div>
+    </div>
+
+
+
+
+
     <!-- Barra di Navigazione -->
     <nav class="navbar bg-light sticky-top">
       <div class="container-fluid">
@@ -33,7 +53,7 @@
           Dwight Schrute
         </a>
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-          <a class="btn btn-secondary me-md-2" type="button" href="#"
+          <a class="btn btn-secondary me-md-2" type="button" href="{% url 'contatti' %}"
             >Contatti</a
           >
         </div>
