--- a/portfolio_django/portfolio/templates/portfolio/curriculum.html
+++ b/portfolio_django/portfolio/templates/portfolio/curriculum.html
@@ -72,7 +72,7 @@
     </div>
   </header>
   <body>
-    <main class="container">
+    <main class="container" id="">
       <div class="row">
         <div class="col-md mb-5">
           <!-- work experience -->
@@ -90,5 +90,14 @@
         </div>
       </div>
     </main>
+
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+      <a
+        class="btn btn-secondary me-md-2"
+        type="button"
+        href="{% url 'cv-download' %}"
+        >Scarica CV</a
+      >
+    </div>
   </body>
 </html>
