--- a/portfolio_django/portfolio/templates/portfolio/homepage.html
+++ b/portfolio_django/portfolio/templates/portfolio/homepage.html
@@ -180,6 +180,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <!-- Contenuti CV -->
           {% for cvelement in cvelements %}
+         
           <div class="col">
             <div class="card shadow ">
               <div class="card-body">
@@ -188,6 +189,7 @@
                 <p class="card-text">
                   {{ cvelement.riassunto }}
                 </p>
+                <a class="btn" href="{% url 'detail' cvelement.id %}">esplora</a>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <!-- <button
